rebased after github complained about big file

--- a/Data prep.ipynb
+++ b/Data prep.ipynb
@@ -462,225 +462,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "994eb9f9-4170-43de-953e-ea1ecb9da0d0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>objectid</th>\n",
-       "      <th>straatnaam</th>\n",
-       "      <th>postcode6</th>\n",
-       "      <th>postcode4</th>\n",
-       "      <th>hsnr_laag</th>\n",
-       "      <th>hsnr_hoog</th>\n",
-       "      <th>hsnr_aant</th>\n",
-       "      <th>buurtcode</th>\n",
-       "      <th>buurtnaam</th>\n",
-       "      <th>wijkcode</th>\n",
-       "      <th>wijknaam</th>\n",
-       "      <th>stadsdeelcode</th>\n",
-       "      <th>stadsdeelnaam</th>\n",
-       "      <th>x_rd</th>\n",
-       "      <th>y_rd</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>geo_shape</th>\n",
-       "      <th>geo_point_2d</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>576</td>\n",
-       "      <td>Bordeauxlaan</td>\n",
-       "      <td>5627GV</td>\n",
-       "      <td>5627</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>522</td>\n",
-       "      <td>Achtse Barrier-Gunterslaer</td>\n",
-       "      <td>52</td>\n",
-       "      <td>Wijk Achtse Molen</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Stadsdeel Woensel-Noord</td>\n",
-       "      <td>159219.520623</td>\n",
-       "      <td>387947.444850</td>\n",
-       "      <td>5.447943</td>\n",
-       "      <td>51.480558</td>\n",
-       "      <td>{\"coordinates\": [5.447941554005463, 51.4805580...</td>\n",
-       "      <td>51.480558093244355, 5.447941554005463</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>577</td>\n",
-       "      <td>Bordeauxlaan</td>\n",
-       "      <td>5627GW</td>\n",
-       "      <td>5627</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>114.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>522</td>\n",
-       "      <td>Achtse Barrier-Gunterslaer</td>\n",
-       "      <td>52</td>\n",
-       "      <td>Wijk Achtse Molen</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Stadsdeel Woensel-Noord</td>\n",
-       "      <td>159175.302700</td>\n",
-       "      <td>387933.685308</td>\n",
-       "      <td>5.447306</td>\n",
-       "      <td>51.480435</td>\n",
-       "      <td>{\"coordinates\": [5.447304851676096, 51.4804347...</td>\n",
-       "      <td>51.4804347440077, 5.447304851676096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>582</td>\n",
-       "      <td>Borodinlaan</td>\n",
-       "      <td>5653HL</td>\n",
-       "      <td>5653</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>721</td>\n",
-       "      <td>Genderdal</td>\n",
-       "      <td>72</td>\n",
-       "      <td>Wijk Oud-Gestel</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Stadsdeel Gestel</td>\n",
-       "      <td>159288.747017</td>\n",
-       "      <td>381420.180850</td>\n",
-       "      <td>5.448860</td>\n",
-       "      <td>51.421887</td>\n",
-       "      <td>{\"coordinates\": [5.448858744580933, 51.4218862...</td>\n",
-       "      <td>51.421886226518914, 5.448858744580933</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>583</td>\n",
-       "      <td>Borretpad</td>\n",
-       "      <td>5652GD</td>\n",
-       "      <td>5652</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>622</td>\n",
-       "      <td>Het Ven</td>\n",
-       "      <td>62</td>\n",
-       "      <td>Wijk Halve Maan</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Stadsdeel Strijp</td>\n",
-       "      <td>159076.165439</td>\n",
-       "      <td>383407.931050</td>\n",
-       "      <td>5.445827</td>\n",
-       "      <td>51.439755</td>\n",
-       "      <td>{\"coordinates\": [5.445825412686405, 51.4397550...</td>\n",
-       "      <td>51.43975504310988, 5.445825412686405</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>586</td>\n",
-       "      <td>Bosboomstraat</td>\n",
-       "      <td>5613KE</td>\n",
-       "      <td>5613</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>312</td>\n",
-       "      <td>Lakerlopen</td>\n",
-       "      <td>31</td>\n",
-       "      <td>Wijk De Laak</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Stadsdeel Tongelre</td>\n",
-       "      <td>162842.491788</td>\n",
-       "      <td>383522.568500</td>\n",
-       "      <td>5.499999</td>\n",
-       "      <td>51.440746</td>\n",
-       "      <td>{\"coordinates\": [5.499997589329138, 51.4407455...</td>\n",
-       "      <td>51.44074558984123, 5.499997589329138</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   objectid     straatnaam postcode6  postcode4  hsnr_laag  hsnr_hoog  \\\n",
-       "0       576   Bordeauxlaan    5627GV       5627        2.0       52.0   \n",
-       "1       577   Bordeauxlaan    5627GW       5627       54.0      114.0   \n",
-       "2       582    Borodinlaan    5653HL       5653        1.0       13.0   \n",
-       "3       583      Borretpad    5652GD       5652        2.0       24.0   \n",
-       "4       586  Bosboomstraat    5613KE       5613        2.0       36.0   \n",
-       "\n",
-       "   hsnr_aant  buurtcode                   buurtnaam  wijkcode  \\\n",
-       "0       26.0        522  Achtse Barrier-Gunterslaer        52   \n",
-       "1       31.0        522  Achtse Barrier-Gunterslaer        52   \n",
-       "2        7.0        721                   Genderdal        72   \n",
-       "3       12.0        622                     Het Ven        62   \n",
-       "4       17.0        312                  Lakerlopen        31   \n",
-       "\n",
-       "            wijknaam  stadsdeelcode            stadsdeelnaam           x_rd  \\\n",
-       "0  Wijk Achtse Molen              5  Stadsdeel Woensel-Noord  159219.520623   \n",
-       "1  Wijk Achtse Molen              5  Stadsdeel Woensel-Noord  159175.302700   \n",
-       "2    Wijk Oud-Gestel              7         Stadsdeel Gestel  159288.747017   \n",
-       "3    Wijk Halve Maan              6         Stadsdeel Strijp  159076.165439   \n",
-       "4       Wijk De Laak              3       Stadsdeel Tongelre  162842.491788   \n",
-       "\n",
-       "            y_rd  longitude   latitude  \\\n",
-       "0  387947.444850   5.447943  51.480558   \n",
-       "1  387933.685308   5.447306  51.480435   \n",
-       "2  381420.180850   5.448860  51.421887   \n",
-       "3  383407.931050   5.445827  51.439755   \n",
-       "4  383522.568500   5.499999  51.440746   \n",
-       "\n",
-       "                                           geo_shape  \\\n",
-       "0  {\"coordinates\": [5.447941554005463, 51.4805580...   \n",
-       "1  {\"coordinates\": [5.447304851676096, 51.4804347...   \n",
-       "2  {\"coordinates\": [5.448858744580933, 51.4218862...   \n",
-       "3  {\"coordinates\": [5.445825412686405, 51.4397550...   \n",
-       "4  {\"coordinates\": [5.499997589329138, 51.4407455...   \n",
-       "\n",
-       "                            geo_point_2d  \n",
-       "0  51.480558093244355, 5.447941554005463  \n",
-       "1    51.4804347440077, 5.447304851676096  \n",
-       "2  51.421886226518914, 5.448858744580933  \n",
-       "3   51.43975504310988, 5.445825412686405  \n",
-       "4   51.44074558984123, 5.499997589329138  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# STEP 2 - extract city districts (wijk in Dutch) and enrich our primary dataset by district mappings\n",
-    "\n",
-    "mappings = pd.read_csv('postcode-buurt-wijk.csv', sep=';', engine='python')\n",
-    "mappings.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "7588ee6e-f1df-4e24-94a6-562cbf1f3dbd",
    "metadata": {},
    "outputs": [
@@ -710,7 +491,8 @@
        "      <th>area</th>\n",
        "      <th>room</th>\n",
        "      <th>price</th>\n",
-       "      <th>postcode6</th>\n",
+       "      <th>pc4</th>\n",
+       "      <th>PC6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -721,65 +503,19 @@
        "      <td>64</td>\n",
        "      <td>3</td>\n",
        "      <td>685000.0</td>\n",
+       "      <td>1091</td>\n",
        "      <td>1091CR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1059 EL</td>\n",
-       "      <td>Kromme Leimuidenstraat 13 H, Amsterdam</td>\n",
-       "      <td>60</td>\n",
-       "      <td>3</td>\n",
-       "      <td>475000.0</td>\n",
-       "      <td>1059EL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1097 SM</td>\n",
-       "      <td>Zaaiersweg 11 A, Amsterdam</td>\n",
-       "      <td>109</td>\n",
-       "      <td>4</td>\n",
-       "      <td>850000.0</td>\n",
-       "      <td>1097SM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1060 TH</td>\n",
-       "      <td>Tenerifestraat 40, Amsterdam</td>\n",
-       "      <td>128</td>\n",
-       "      <td>6</td>\n",
-       "      <td>580000.0</td>\n",
-       "      <td>1060TH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1036 KN</td>\n",
-       "      <td>Winterjanpad 21, Amsterdam</td>\n",
-       "      <td>138</td>\n",
-       "      <td>5</td>\n",
-       "      <td>720000.0</td>\n",
-       "      <td>1036KN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       zip                                 address  area  room     price  \\\n",
-       "0  1091 CR            Blasiusstraat 8 2, Amsterdam    64     3  685000.0   \n",
-       "1  1059 EL  Kromme Leimuidenstraat 13 H, Amsterdam    60     3  475000.0   \n",
-       "2  1097 SM              Zaaiersweg 11 A, Amsterdam   109     4  850000.0   \n",
-       "3  1060 TH            Tenerifestraat 40, Amsterdam   128     6  580000.0   \n",
-       "4  1036 KN              Winterjanpad 21, Amsterdam   138     5  720000.0   \n",
-       "\n",
-       "  postcode6  \n",
-       "0    1091CR  \n",
-       "1    1059EL  \n",
-       "2    1097SM  \n",
-       "3    1060TH  \n",
-       "4    1036KN  "
+       "       zip                       address  area  room     price   pc4     PC6\n",
+       "0  1091 CR  Blasiusstraat 8 2, Amsterdam    64     3  685000.0  1091  1091CR"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,203 +539,84 @@
     "\n",
     "\n",
     "# prepare our df zip code col for mapping\n",
-    "df['postcode6'] = df.zip.str.replace(\" \", \"\")\n",
-    "df.head()"
+    "df['pc4'] = df.zip.str.split().str[0]\n",
+    "df['PC6'] = df.zip.str.replace(' ', '')\n",
+    "df.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "66e96e8b-d773-4a57-982e-d80cb053a122",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>straatnaam</th>\n",
-       "      <th>postcode6</th>\n",
-       "      <th>buurtcode</th>\n",
-       "      <th>buurtnaam</th>\n",
-       "      <th>wijkcode</th>\n",
-       "      <th>wijknaam</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bordeauxlaan</td>\n",
-       "      <td>5627GV</td>\n",
-       "      <td>522</td>\n",
-       "      <td>Achtse Barrier-Gunterslaer</td>\n",
-       "      <td>52</td>\n",
-       "      <td>Wijk Achtse Molen</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     straatnaam postcode6  buurtcode                   buurtnaam  wijkcode  \\\n",
-       "0  Bordeauxlaan    5627GV        522  Achtse Barrier-Gunterslaer        52   \n",
-       "\n",
-       "            wijknaam  \n",
-       "0  Wijk Achtse Molen  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# clean up our mappings dataframe and prepare for merging\n",
-    "mappings = mappings[['straatnaam', 'postcode6', 'buurtcode', 'buurtnaam', 'wijkcode', 'wijknaam']]\n",
-    "mappings.head(1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "2c8557e8-c020-4b91-bc7d-1d952309058c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>zip</th>\n",
-       "      <th>address</th>\n",
-       "      <th>area</th>\n",
-       "      <th>room</th>\n",
-       "      <th>price</th>\n",
-       "      <th>postcode6</th>\n",
-       "      <th>straatnaam</th>\n",
-       "      <th>buurtcode</th>\n",
-       "      <th>buurtnaam</th>\n",
-       "      <th>wijkcode</th>\n",
-       "      <th>wijknaam</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1091 CR</td>\n",
-       "      <td>Blasiusstraat 8 2, Amsterdam</td>\n",
-       "      <td>64</td>\n",
-       "      <td>3</td>\n",
-       "      <td>685000.0</td>\n",
-       "      <td>1091CR</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       zip                       address  area  room     price postcode6  \\\n",
-       "0  1091 CR  Blasiusstraat 8 2, Amsterdam    64     3  685000.0    1091CR   \n",
-       "\n",
-       "  straatnaam  buurtcode buurtnaam  wijkcode wijknaam  \n",
-       "0        NaN        NaN       NaN       NaN      NaN  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# merge 2 dataftames\n",
-    "# df = df.merge(mappings, on='postcode6')\n",
-    "# df.head(1)\n",
-    "df_merged = df.merge(mappings, on=\"postcode6\", how=\"left\")\n",
-    "df_merged.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "b22d020e-9d7b-4af6-b751-c2638b0c1bb7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1091CR', '1059EL', '1097SM', '1060TH', '1036KN', '1051AM', '1033KM', '1053WL', '1058DG', '1073TM']\n",
-      "['5627GV', '5627GW', '5653HL', '5652GD', '5613KE', '5612AM', '5612HC', '5612HG', '5621JA', '5621JB']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df['postcode6'].head(10).tolist())\n",
-    "print(mappings['postcode6'].head(10).tolist())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "97f09bee-6179-49a2-ad50-eabd154e9e3c",
+   "execution_count": 8,
+   "id": "19b18928-40d9-4b84-9f0d-a48bfc4071a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "set()"
+       "70"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set(df['postcode6']).intersection(set(mappings['postcode6']))\n"
+    "df.pc4.nunique() # 70 - much better for grouping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b53243bc-18ae-4bee-b451-c4e95c5576a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STEP 2 - download district and area codes - buurt and wijk - from national statistics bureau:\n",
+    "# https://www.cbs.nl/nl-nl/maatwerk/2023/35/buurt-wijk-en-gemeente-2023-voor-postcode-huisnummer\n",
+    "\n",
+    "# mapping = pd.read_csv('pc6hnr20230801_gwb.csv', delimiter=';')\n",
+    "# mapping.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "415a01d3-9bdb-48ae-8f6b-66e6b2c74e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge dataframes\n",
+    "\n",
+    "# df = df.merge(mapping, on='PC6')\n",
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b921cb91-c10c-41ed-a817-f47b99f2146e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "200"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19b18928-40d9-4b84-9f0d-a48bfc4071a5",
+   "id": "5b04f758-0ba3-462a-93e8-44f0521d0124",
    "metadata": {},
    "outputs": [],
    "source": []
