XGBoost model finished

--- a/Data prep.ipynb
+++ b/Data prep.ipynb
@@ -657,7 +657,9 @@
   {
    "cell_type": "markdown",
    "id": "7abc521d-efa3-46e5-8826-abf324d84505",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Building a Random Forest model"
    ]
@@ -3689,6 +3691,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4eaa248-44b7-4f7c-9bc5-8188f2c06466",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Building an XGBoost model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "4b81515f-c21c-44aa-b565-4c3cf3409e53",
@@ -3700,29 +3712,186 @@
     "# Install XGBoost\n",
     "# Create DMatrix for train and validation\n",
     "# Create a watchlist\n",
-    "# Train a model with these parameters for 100 rounds:\n",
-    "# xgb_params = {\n",
-    "#     'eta': 0.3, \n",
-    "#     'max_depth': 6,\n",
-    "#     'min_child_weight': 1,\n",
-    "    \n",
-    "#     'objective': 'reg:squarederror',\n",
-    "#     'nthread': 8,\n",
-    "    \n",
-    "#     'seed': 1,\n",
-    "#     'verbosity': 1,\n",
-    "# }\n",
-    "# Now change eta from 0.3 to 0.1.\n",
+    "# Train a model with these parameters for 100 rounds\n",
     "\n",
-    "# Which eta leads to the best RMSE score on the validation dataset?\n",
+    "# Which eta leads to the best RMSE score on the validation dataset = 0.1\n",
     "\n",
     "import xgboost as xgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "e3de4416-1989-4794-bed3-55d439d86212",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create DMatrix for train and validation\n",
+    "# Create a watchlist\n",
+    "\n",
+    "# xgboost needs d-matrix for train - a special data structure:\n",
+    "features = list(dv.get_feature_names_out())\n",
+    "dtrain = xgb.DMatrix(X_train, label=y_train, feature_names=features)\n",
+    "dval = xgb.DMatrix(X_val, label=y_val, feature_names=features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "27d3d5a3-03ad-420a-93c0-5870f8c94d2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train a model with these parameters for 100 rounds:\n",
+    "xgb_params = {\n",
+    "    'eta': 0.3, \n",
+    "    'max_depth': 6,\n",
+    "    'min_child_weight': 1,\n",
+    "    \n",
+    "    'objective': 'reg:squarederror',\n",
+    "    'nthread': 8,\n",
+    "    \n",
+    "    'seed': 1,\n",
+    "    'verbosity': 1,\n",
+    "}\n",
+    "\n",
+    "model = xgb.train(xgb_params, dtrain, num_boost_round=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "28175f8a-160b-4c0e-99f1-a2fa519d72f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 335270.6690\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(dval)\n",
+    "\n",
+    "# Compute RMSE\n",
+    "rmse = np.sqrt(mean_squared_error(y_val, y_pred))\n",
+    "print(f\"RMSE: {rmse:.4f}\")\n",
+    "# Not much better compared to RF model - \n",
+    "# Mean RMSE: 322943.2528 ± 1503.7253 for max_depth: 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "81e0fdef-c3f6-49f9-aca4-08a017a5d3e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now change eta from 0.3 to 0.1.\n",
+    "\n",
+    "# Which eta leads to the best RMSE score on the validation dataset - 0.1\n",
+    "\n",
+    "\n",
+    "xgb_params = {\n",
+    "    'eta': 0.1, \n",
+    "    'max_depth': 6,\n",
+    "    'min_child_weight': 1,\n",
+    "    \n",
+    "    'objective': 'reg:squarederror',\n",
+    "    'nthread': 8,\n",
+    "    \n",
+    "    'seed': 1,\n",
+    "    'verbosity': 1,\n",
+    "}\n",
+    "\n",
+    "model = xgb.train(xgb_params, dtrain, num_boost_round=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8d56656f-fe61-4c95-8872-97908aca44cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 323574.2024\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(dval)\n",
+    "\n",
+    "# Compute RMSE\n",
+    "rmse = np.sqrt(mean_squared_error(y_val, y_pred))\n",
+    "print(f\"RMSE: {rmse:.4f}\") # RMSE: 323574.2024 if 'eta': 0.1\n",
+    "# comparable to RF model now - Mean RMSE: 322943.2528 ± 1503.7253 for max_depth: 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "009b6fbf-721c-44f7-968c-8fb2bbc341e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a4d9ba6-e05f-4e1b-96a9-f5af3c7b004b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12400af6-fde1-4c6d-afea-69123c4d5283",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49311ab3-0cbd-4fde-b39e-da494fbba6d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a52f7dc-1b91-4229-a9d4-936361bd14b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "929ba8fe-03b5-44a5-bdab-9f89eeab6493",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8217106d-cb59-491c-b7c6-a58d5b24aebc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f8369fc-e878-47cd-baf1-3c51825a3e56",
    "metadata": {},
    "outputs": [],
    "source": []
