Pickled model and dv as pipeline to local file

--- a/Data prep.ipynb
+++ b/Data prep.ipynb
@@ -4202,9 +4202,7 @@
   {
    "cell_type": "markdown",
    "id": "ba6c8172-5cc7-4782-ba1a-50c8cffcfa40",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Training the final model and final test on test dataset"
    ]
@@ -4434,14 +4432,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "id": "5cd03ed0-dce5-4858-bcad-0ae24f910343",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pickle the model and save it to a local file:\n",
     "# XGBoost has its own built-in serialization, which is more stable than Python pickle.\n",
-    "model.save_model(\"xgb_model_Ams_17.11.2025.json\")\n"
+    "# model.save_model(\"xgb_model_Ams_17.11.2025.json\") \n",
+    "# but its not convenient - I need to pickle dv separately...\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "#  dv = trained DictVectorizer\n",
+    "#  model = trained XGBoost Booster model\n",
+    "\n",
+    "data_to_save = {\n",
+    "    \"dv\": dv,\n",
+    "    \"model\": model\n",
+    "}\n",
+    "\n",
+    "with open(\"Ams_xgb_pipeline.17.11.2025.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(data_to_save, f)\n",
+    "\n"
    ]
   },
   {
