--- a/Predict using XGB model.ipynb
+++ b/Predict using XGB model.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "354d5ff3-8233-42fb-b50f-a50894671e47",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
     "import xgboost as xgb\n",
     "\n",
     "loaded_model = xgb.Booster()\n",
-    "loaded_model.load_model(\"xgb_model.json\")\n"
+    "loaded_model.load_model(\"xgb_model_Ams_17.11.2025.json\")\n"
    ]
   },
   {
