hitting format errors on prediction

--- a/Data prep.ipynb
+++ b/Data prep.ipynb
@@ -4202,7 +4202,9 @@
   {
    "cell_type": "markdown",
    "id": "ba6c8172-5cc7-4782-ba1a-50c8cffcfa40",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Training the final model and final test on test dataset"
    ]
