--- a/Predict using XGB model.ipynb
+++ b/Predict using XGB model.ipynb
@@ -84,29 +84,56 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "100",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\tmp\\amsterdam-housing-price-prediction\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: 100",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\tmp\\amsterdam-housing-price-prediction\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4112\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4115\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\tmp\\amsterdam-housing-price-prediction\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-      "\u001b[31mKeyError\u001b[39m: 100"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pc4</th>\n",
+       "      <th>area</th>\n",
+       "      <th>room</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>1092</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3</td>\n",
+       "      <td>500000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      pc4  area  room     price\n",
+       "100  1092    67     3  500000.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[100]"
+    "df.iloc[[100]] # 100\t1092\t67\t3\t500000.0\n"
    ]
   },
   {
@@ -118,24 +145,134 @@
    "source": [
     "# Load saved model from local drive\n",
     "\n",
+    "import pickle\n",
+    "\n",
+    "with open(\"Ams_xgb_pipeline.17.11.2025.pkl\", \"rb\") as f:\n",
+    "    loaded = pickle.load(f)\n",
+    "\n",
+    "dv = loaded[\"dv\"]\n",
+    "model = loaded[\"model\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0679be4f-9190-4936-9239-649f1b291871",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\d_local\\AppData\\Local\\Temp\\ipykernel_12584\\2247003882.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_new.price = np.log1p(df_new.price)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "data did not contain feature names, but the following fields are expected: area, pc4=1011, pc4=1012, pc4=1013, pc4=1014, pc4=1015, pc4=1016, pc4=1017, pc4=1018, pc4=1019, pc4=1021, pc4=1023, pc4=1024, pc4=1025, pc4=1027, pc4=1028, pc4=1031, pc4=1032, pc4=1033, pc4=1034, pc4=1035, pc4=1036, pc4=1051, pc4=1052, pc4=1053, pc4=1054, pc4=1055, pc4=1056, pc4=1057, pc4=1058, pc4=1059, pc4=1060, pc4=1061, pc4=1062, pc4=1063, pc4=1064, pc4=1065, pc4=1066, pc4=1067, pc4=1068, pc4=1069, pc4=1071, pc4=1072, pc4=1073, pc4=1074, pc4=1075, pc4=1076, pc4=1077, pc4=1078, pc4=1079, pc4=1081, pc4=1082, pc4=1083, pc4=1086, pc4=1087, pc4=1091, pc4=1092, pc4=1093, pc4=1094, pc4=1095, pc4=1096, pc4=1097, pc4=1098, pc4=1102, pc4=1103, pc4=1104, pc4=1106, pc4=1107, pc4=1108, pc4=1109, room",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     15\u001b[39m dnew = xgb.DMatrix(X_new)\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Predict\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m y_pred = \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdnew\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m exp_price = np.expm1(y_pred)\n\u001b[32m     20\u001b[39m \u001b[38;5;28mprint\u001b[39m(y_pred, exp_price, real_price)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\tmp\\amsterdam-housing-price-prediction\\.venv\\Lib\\site-packages\\xgboost\\core.py:774\u001b[39m, in \u001b[36mrequire_keyword_args.<locals>.throw_if.<locals>.inner_f\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    772\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k, arg \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(sig.parameters, args):\n\u001b[32m    773\u001b[39m     kwargs[k] = arg\n\u001b[32m--> \u001b[39m\u001b[32m774\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\tmp\\amsterdam-housing-price-prediction\\.venv\\Lib\\site-packages\\xgboost\\core.py:2689\u001b[39m, in \u001b[36mBooster.predict\u001b[39m\u001b[34m(self, data, output_margin, pred_leaf, pred_contribs, approx_contribs, pred_interactions, validate_features, training, iteration_range, strict_shape)\u001b[39m\n\u001b[32m   2687\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m validate_features:\n\u001b[32m   2688\u001b[39m     fn = data.feature_names\n\u001b[32m-> \u001b[39m\u001b[32m2689\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_validate_features\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2690\u001b[39m args = {\n\u001b[32m   2691\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mtype\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0\u001b[39m,\n\u001b[32m   2692\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mtraining\u001b[39m\u001b[33m\"\u001b[39m: training,\n\u001b[32m   (...)\u001b[39m\u001b[32m   2695\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mstrict_shape\u001b[39m\u001b[33m\"\u001b[39m: strict_shape,\n\u001b[32m   2696\u001b[39m }\n\u001b[32m   2698\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34massign_type\u001b[39m(t: \u001b[38;5;28mint\u001b[39m) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\tmp\\amsterdam-housing-price-prediction\\.venv\\Lib\\site-packages\\xgboost\\core.py:3403\u001b[39m, in \u001b[36mBooster._validate_features\u001b[39m\u001b[34m(self, feature_names)\u001b[39m\n\u001b[32m   3400\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m   3402\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m feature_names \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m.feature_names \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3403\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   3404\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mdata did not contain feature names, but the following fields are expected: \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   3405\u001b[39m         + \u001b[33m\"\u001b[39m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m.join(\u001b[38;5;28mself\u001b[39m.feature_names)\n\u001b[32m   3406\u001b[39m     )\n\u001b[32m   3408\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.feature_names != feature_names:\n\u001b[32m   3409\u001b[39m     dat_missing = \u001b[38;5;28mset\u001b[39m(cast(FeatureNames, \u001b[38;5;28mself\u001b[39m.feature_names)) - \u001b[38;5;28mset\u001b[39m(\n\u001b[32m   3410\u001b[39m         cast(FeatureNames, feature_names)\n\u001b[32m   3411\u001b[39m     )\n",
+      "\u001b[31mValueError\u001b[39m: data did not contain feature names, but the following fields are expected: area, pc4=1011, pc4=1012, pc4=1013, pc4=1014, pc4=1015, pc4=1016, pc4=1017, pc4=1018, pc4=1019, pc4=1021, pc4=1023, pc4=1024, pc4=1025, pc4=1027, pc4=1028, pc4=1031, pc4=1032, pc4=1033, pc4=1034, pc4=1035, pc4=1036, pc4=1051, pc4=1052, pc4=1053, pc4=1054, pc4=1055, pc4=1056, pc4=1057, pc4=1058, pc4=1059, pc4=1060, pc4=1061, pc4=1062, pc4=1063, pc4=1064, pc4=1065, pc4=1066, pc4=1067, pc4=1068, pc4=1069, pc4=1071, pc4=1072, pc4=1073, pc4=1074, pc4=1075, pc4=1076, pc4=1077, pc4=1078, pc4=1079, pc4=1081, pc4=1082, pc4=1083, pc4=1086, pc4=1087, pc4=1091, pc4=1092, pc4=1093, pc4=1094, pc4=1095, pc4=1096, pc4=1097, pc4=1098, pc4=1102, pc4=1103, pc4=1104, pc4=1106, pc4=1107, pc4=1108, pc4=1109, room"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict price of a row 100\n",
     "import xgboost as xgb\n",
     "\n",
-    "loaded_model = xgb.Booster()\n",
-    "loaded_model.load_model(\"xgb_model_Ams_17.11.2025.json\")\n"
+    "# Load 1 data point\n",
+    "df_new = df.iloc[[100]]\n",
+    "real_price = df_new.price\n",
+    "\n",
+    "# Log1p price\n",
+    "df_new.price = np.log1p(df_new.price)\n",
+    "\n",
+    "# Transform using saved DictVectorizer\n",
+    "X_new = dv.transform(df_new.to_dict(orient='records'))\n",
+    "\n",
+    "# Wrap in DMatrix\n",
+    "dnew = xgb.DMatrix(X_new)\n",
+    "\n",
+    "# Predict\n",
+    "y_pred = model.predict(dnew)\n",
+    "exp_price = np.expm1(y_pred)\n",
+    "print(y_pred, exp_price, real_price)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "99fbbffd-f388-412b-9226-1f5b7bf80f61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pc4</th>\n",
+       "      <th>area</th>\n",
+       "      <th>room</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>1092</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13.122365</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      pc4  area  room      price\n",
+       "100  1092    67     3  13.122365"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0679be4f-9190-4936-9239-649f1b291871",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99fbbffd-f388-412b-9226-1f5b7bf80f61",
+   "id": "bc2eab20-4092-4fe7-a050-9d9cd752923f",
    "metadata": {},
    "outputs": [],
    "source": []
