to debug training pipeline created a separate notebook for it

--- a/Predict using XGB model.ipynb
+++ b/Predict using XGB model.ipynb
@@ -156,22 +156,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "0679be4f-9190-4936-9239-649f1b291871",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper function to return price from values entered\n",
+    "\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "def predict_price(pc4, area, room, dv, model):\n",
+    "    # 1. Create a record exactly like training data\n",
+    "    record = {\n",
+    "        \"pc4\": str(pc4),   # pc4 is categorical → string\n",
+    "        \"area\": float(area),\n",
+    "        \"room\": float(room)\n",
+    "    }\n",
+    "\n",
+    "    # 2. Transform with DictVectorizer\n",
+    "    X = dv.transform([record])\n",
+    "\n",
+    "    # 3. Predict (log scale)\n",
+    "    dmatrix = xgb.DMatrix(X)\n",
+    "    y_log = model.predict(dmatrix)[0]\n",
+    "\n",
+    "    # 4. Convert log1p → price\n",
+    "    return np.expm1(y_log)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "99fbbffd-f388-412b-9226-1f5b7bf80f61",
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\d_local\\AppData\\Local\\Temp\\ipykernel_12584\\2247003882.py:9: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_new.price = np.log1p(df_new.price)\n"
-     ]
-    },
     {
      "ename": "ValueError",
      "evalue": "data did not contain feature names, but the following fields are expected: area, pc4=1011, pc4=1012, pc4=1013, pc4=1014, pc4=1015, pc4=1016, pc4=1017, pc4=1018, pc4=1019, pc4=1021, pc4=1023, pc4=1024, pc4=1025, pc4=1027, pc4=1028, pc4=1031, pc4=1032, pc4=1033, pc4=1034, pc4=1035, pc4=1036, pc4=1051, pc4=1052, pc4=1053, pc4=1054, pc4=1055, pc4=1056, pc4=1057, pc4=1058, pc4=1059, pc4=1060, pc4=1061, pc4=1062, pc4=1063, pc4=1064, pc4=1065, pc4=1066, pc4=1067, pc4=1068, pc4=1069, pc4=1071, pc4=1072, pc4=1073, pc4=1074, pc4=1075, pc4=1076, pc4=1077, pc4=1078, pc4=1079, pc4=1081, pc4=1082, pc4=1083, pc4=1086, pc4=1087, pc4=1091, pc4=1092, pc4=1093, pc4=1094, pc4=1095, pc4=1096, pc4=1097, pc4=1098, pc4=1102, pc4=1103, pc4=1104, pc4=1106, pc4=1107, pc4=1108, pc4=1109, room",
@@ -179,7 +197,8 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     15\u001b[39m dnew = xgb.DMatrix(X_new)\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Predict\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m y_pred = \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdnew\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m exp_price = np.expm1(y_pred)\n\u001b[32m     20\u001b[39m \u001b[38;5;28mprint\u001b[39m(y_pred, exp_price, real_price)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m room = row[\u001b[33m'\u001b[39m\u001b[33mroom\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      6\u001b[39m real = row[\u001b[33m'\u001b[39m\u001b[33mprice\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m pred = \u001b[43mpredict_price\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpc4\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marea\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroom\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mReal price:     \u001b[39m\u001b[33m\"\u001b[39m, real)\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPredicted price:\u001b[39m\u001b[33m\"\u001b[39m, pred)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36mpredict_price\u001b[39m\u001b[34m(pc4, area, room, dv, model)\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# 3. Predict (log scale)\u001b[39;00m\n\u001b[32m     17\u001b[39m dmatrix = xgb.DMatrix(X)\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m y_log = \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdmatrix\u001b[49m\u001b[43m)\u001b[49m[\u001b[32m0\u001b[39m]\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# 4. Convert log1p → price\u001b[39;00m\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m np.expm1(y_log)\n",
       "\u001b[36mFile \u001b[39m\u001b[32mC:\\tmp\\amsterdam-housing-price-prediction\\.venv\\Lib\\site-packages\\xgboost\\core.py:774\u001b[39m, in \u001b[36mrequire_keyword_args.<locals>.throw_if.<locals>.inner_f\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    772\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k, arg \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(sig.parameters, args):\n\u001b[32m    773\u001b[39m     kwargs[k] = arg\n\u001b[32m--> \u001b[39m\u001b[32m774\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32mC:\\tmp\\amsterdam-housing-price-prediction\\.venv\\Lib\\site-packages\\xgboost\\core.py:2689\u001b[39m, in \u001b[36mBooster.predict\u001b[39m\u001b[34m(self, data, output_margin, pred_leaf, pred_contribs, approx_contribs, pred_interactions, validate_features, training, iteration_range, strict_shape)\u001b[39m\n\u001b[32m   2687\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m validate_features:\n\u001b[32m   2688\u001b[39m     fn = data.feature_names\n\u001b[32m-> \u001b[39m\u001b[32m2689\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_validate_features\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2690\u001b[39m args = {\n\u001b[32m   2691\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mtype\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0\u001b[39m,\n\u001b[32m   2692\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mtraining\u001b[39m\u001b[33m\"\u001b[39m: training,\n\u001b[32m   (...)\u001b[39m\u001b[32m   2695\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mstrict_shape\u001b[39m\u001b[33m\"\u001b[39m: strict_shape,\n\u001b[32m   2696\u001b[39m }\n\u001b[32m   2698\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34massign_type\u001b[39m(t: \u001b[38;5;28mint\u001b[39m) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n",
       "\u001b[36mFile \u001b[39m\u001b[32mC:\\tmp\\amsterdam-housing-price-prediction\\.venv\\Lib\\site-packages\\xgboost\\core.py:3403\u001b[39m, in \u001b[36mBooster._validate_features\u001b[39m\u001b[34m(self, feature_names)\u001b[39m\n\u001b[32m   3400\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m   3402\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m feature_names \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m.feature_names \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3403\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   3404\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mdata did not contain feature names, but the following fields are expected: \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   3405\u001b[39m         + \u001b[33m\"\u001b[39m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m.join(\u001b[38;5;28mself\u001b[39m.feature_names)\n\u001b[32m   3406\u001b[39m     )\n\u001b[32m   3408\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.feature_names != feature_names:\n\u001b[32m   3409\u001b[39m     dat_missing = \u001b[38;5;28mset\u001b[39m(cast(FeatureNames, \u001b[38;5;28mself\u001b[39m.feature_names)) - \u001b[38;5;28mset\u001b[39m(\n\u001b[32m   3410\u001b[39m         cast(FeatureNames, feature_names)\n\u001b[32m   3411\u001b[39m     )\n",
@@ -188,85 +207,18 @@
     }
    ],
    "source": [
-    "# Predict price of a row 100\n",
-    "import xgboost as xgb\n",
+    "row = df.iloc[100]\n",
     "\n",
-    "# Load 1 data point\n",
-    "df_new = df.iloc[[100]]\n",
-    "real_price = df_new.price\n",
+    "pc4  = row['pc4']\n",
+    "area = row['area']\n",
+    "room = row['room']\n",
+    "real = row['price']\n",
     "\n",
-    "# Log1p price\n",
-    "df_new.price = np.log1p(df_new.price)\n",
+    "pred = predict_price(pc4, area, room, dv, model)\n",
     "\n",
-    "# Transform using saved DictVectorizer\n",
-    "X_new = dv.transform(df_new.to_dict(orient='records'))\n",
-    "\n",
-    "# Wrap in DMatrix\n",
-    "dnew = xgb.DMatrix(X_new)\n",
-    "\n",
-    "# Predict\n",
-    "y_pred = model.predict(dnew)\n",
-    "exp_price = np.expm1(y_pred)\n",
-    "print(y_pred, exp_price, real_price)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "99fbbffd-f388-412b-9226-1f5b7bf80f61",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pc4</th>\n",
-       "      <th>area</th>\n",
-       "      <th>room</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>1092</td>\n",
-       "      <td>67</td>\n",
-       "      <td>3</td>\n",
-       "      <td>13.122365</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      pc4  area  room      price\n",
-       "100  1092    67     3  13.122365"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_new"
+    "print(\"Real price:     \", real)\n",
+    "print(\"Predicted price:\", pred)\n",
+    "print(\"Error:          \", pred - real)\n"
    ]
   },
   {
