--- a/training pipeline.ipynb
+++ b/training pipeline.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# STEP 2 - prepare X_full_train\n",
+    "# STEP 1 - prepare X_full_train\n",
     "\n",
     "# make number of rooms and area as integers\n",
     "df['area'] = df['area'].astype('int64')\n",
@@ -110,8 +110,125 @@
     "\n",
     "# prepare label (target variable)\n",
     "y_full_train = df_full_train.price.values\n",
-    "y_test = df_test.price.values\n"
+    "y_test = df_test.price.values\n",
+    "\n",
+    "# remove label so model cannot learn from it accidentally\n",
+    "del df_full_train['price']\n",
+    "del df_test['price']\n",
+    "\n",
+    "# we use many categorical features, thus one-hot encoding is needed:\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.tree import export_text\n",
+    "full_train_dicts = df_full_train.to_dict(orient='records')\n",
+    "test_dicts = df_test.to_dict(orient='records')\n",
+    "\n",
+    "# Use DictVectorizer(sparse=True) to turn the dataframes into matrices.\n",
+    "dv = DictVectorizer(sparse=True)\n",
+    "X_full_train = dv.fit_transform(full_train_dicts) \n",
+    "X_test = dv.transform(test_dicts) \n",
+    "\n",
+    "import xgboost as xgb\n",
+    "features = list(dv.get_feature_names_out())\n",
+    "\n",
+    "# Build dmatrices:\n",
+    "d_full_train = xgb.DMatrix(X_full_train, label=y_full_train, feature_names=features)\n",
+    "dtest = xgb.DMatrix(X_test, label=y_test, feature_names=features)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8aa8f2f7-9d8d-42f4-9384-a8920cc3ecea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xgboost.core.Booster at 0x18875f5d940>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# STEP 2 - train XGBoost model\n",
+    "\n",
+    "# Train a model with these fine tuned parameters for 100 rounds:\n",
+    "xgb_params = {\n",
+    "    'eta': 0.3, \n",
+    "    'max_depth': 6,\n",
+    "    'min_child_weight': 1,\n",
+    "    \n",
+    "    'objective': 'reg:squarederror',\n",
+    "    'nthread': 8,\n",
+    "    \n",
+    "    'seed': 1,\n",
+    "    'verbosity': 1,\n",
+    "}\n",
+    "\n",
+    "model = xgb.train(xgb_params, d_full_train, num_boost_round=100)\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5db954fb-e355-4867-a2bb-1076823b863c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.1922\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(dtest)\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Compute RMSE\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "print(f\"RMSE: {rmse:.4f}\") \n",
+    "\n",
+    "# On full train we sould get RMSE: 0.1948\n",
+    "# Practically we got RMSE: 0.1922"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d2b13efb-629a-4a3a-bb99-ea1b3726211d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STEP 3 - pickle model and dv together\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "#  dv = trained DictVectorizer\n",
+    "#  model = trained XGBoost Booster model\n",
+    "\n",
+    "data_to_save = {\n",
+    "    \"dv\": dv,\n",
+    "    \"model\": model\n",
+    "}\n",
+    "\n",
+    "with open(\"Ams_xgb_pipeline.18.11.2025.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(data_to_save, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dfc8c0f-7a62-4b51-bd5b-160a82f0477c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
