--- a/training pipeline.ipynb
+++ b/training pipeline.ipynb
@@ -144,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "<xgboost.core.Booster at 0x18875f5d940>"
+       "<xgboost.core.Booster at 0x191faced940>"
       ]
      },
      "execution_count": 3,
@@ -224,8 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9dfc8c0f-7a62-4b51-bd5b-160a82f0477c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1abba31-ac42-451e-b798-f72f0a1b4e44",
    "metadata": {},
    "outputs": [],
    "source": []
