prediction script created

--- a/Predict using XGB model.ipynb
+++ b/Predict using XGB model.ipynb
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Load saved model from local drive\n",
-    "with open(\"Ams_xgb_pipeline.18.11.2025.pkl\", \"rb\") as f:\n",
+    "with open(\"Ams_xgb_pipeline.pkl\", \"rb\") as f:\n",
     "    loaded = pickle.load(f)\n",
     "\n",
     "dv = loaded[\"dv\"]\n",
